--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
 		<i class="fa fa-play" id="play" aria-hidden="true"></i>
 		<!--<i class="fa fa-pause" id="pause" aria-hidden="true"></i>-->
 	</button>
+
+	<div class="move-music">
+		<button class="backward">
+			<i class="fa fa-step-backward" aria-hidden="true"></i>
+		</button>
+		<button class="forward"> 
+			<i class="fa fa-step-forward" aria-hidden="true"></i>
+		</button>
+	</div>
 	
 
 </body>
