--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 			var chemin_img = "img/";
 			var musique = [];
 			var numero = 0;
+			console.log(chemin + playlist[0].chemin);
+
 
 			//Crée le tableau HTML
 			function afficher()
@@ -58,14 +60,14 @@
 
 	<button class="control play" onclick="play('audioPlayer', this)">
 		<i class="fa fa-play" id="play" aria-hidden="true"></i>
-		<!--<i class="fa fa-pause" id="pause" aria-hidden="true"></i>-->
+		<i class="fa fa-pause desactive" id="pause" aria-hidden="true"></i>
 	</button>
 
 	<div class="move-music">
-		<button class="backward">
+		<button class="backward" onclick="backward('audioPlayer', this)">
 			<i class="fa fa-step-backward" aria-hidden="true"></i>
 		</button>
-		<button class="forward"> 
+		<button class="forward" onclick="forward('audioPlayer', this)"> 
 			<i class="fa fa-step-forward" aria-hidden="true"></i>
 		</button>
 	</div>
