--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div class="lecture">
 			<span id="progressTime">0:00</span>
 			<div id="progressBarControl">
-		   		<div id="progressBar" onclick="clickProgress('audioPlayer', this, event)">.</div>
+		   		<div id="progressBar" onclick="clickProgress('audioPlayer', this, event)"></div>
 			</div>
 			
 			<span class="volume">
