Modification boutons generation suiv / prec

--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
 	</div>
 
 	<button onclick="autoplay('audioPlayer', this)"></button>
-	<button onclick="back_generation()">
-		<i class="fa fa-angle-left" aria-hidden="true"></i>
+	<button class="back_generation" onclick="back_generation()">
+		<!--<i class="fa fa-angle-left" aria-hidden="true"></i>-->
+		<i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
 	</button>
-	<button onclick="next_generation()">
-		<i class="fa fa-angle-right" aria-hidden="true"></i>
+	<button class="next_genereation" onclick="next_generation()">
+		<i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
 	</button>
 	
 
