Modification des images du background

--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@
 			switch(playlists[num_playlist])
 			{
 				case kanto:
-					document.body.style.background = 'url(img/kanto.png)'; 
+					document.body.style.background = 'url(img/kanto.jpg)'; 
 					playlist_nom.innerHTML = "Kanto";
 					break;
 				case hoenn:
-					document.body.style.background = 'url(img/hoenn.png)'; 
+					document.body.style.background = 'url(img/hoenn.jpg)'; 
 					playlist_nom.innerHTML = "Hoenn";
 					break;
 				case sinnoh:
-					document.body.style.background = 'url(img/sinnoh.jpeg)'; 
+					document.body.style.background = 'url(img/sinnoh.jpg)'; 
 					playlist_nom.innerHTML = "Sinnoh";
 					break;
 				case johto:
-					document.body.style.background = 'url(img/johto.jpeg)'; 
+					document.body.style.background = 'url(img/johto.jpg)'; 
 					playlist_nom.innerHTML = "Johto";
 					break;
 			}
