Message fenetre trop petite

--- a/player.html
+++ b/player.html
@@ -104,7 +104,9 @@
 		<i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
 	</button>
 	
-
+	<div class="window_size">
+		<h2>Fenêtre trop petite</h2>
+	</div>
 	<script>
 	
 		//Fonction permettant de changer de fond, et de playlist
