Modifications des regions dans la page d'accueil

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<button class="poke_gate"></button>
 
 	<!-- Choix de la région -->
-	<a href="player.html?numplaylist=0"><div class="region"><span>Kanto</span></div></a>
-	<a href="player.html?numplaylist=1"><div class="region"><span>Johto</span></div></a>
-	<a href="player.html?numplaylist=2"><div class="region"><span>Hoenn</span></div></a>
-	<a href="player.html?numplaylist=3"><div class="region"><span>Sinnoh</span></div></a>
+	<a href="player.html?numplaylist=0"><div class="region"><h3>kanto</h3></div></a>
+	<a href="player.html?numplaylist=1"><div class="region"><h3>Johto</h3></div></a>
+	<a href="player.html?numplaylist=2"><div class="region"><h3>Hoenn</h3></div></a>
+	<a href="player.html?numplaylist=3"><div class="region"><h3>Sinnoh</h3></div></a>
 
 </body>
 <script type="text/javascript">
